[package]
name = "sieve_ir"
version = "0.1.0"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
license = "MIT"
build = "build.rs"
edition = '2018'
description = "An implementation of SIEVE IR"
homepage = "https://github.mit.edu/sieve-all/zkinterface-sieve"
repository = "https://github.mit.edu/sieve-all/zkinterface-sieve/tree/master/rust"
keywords = ["zero-knowledge", "zkproof", "cryptography"]

[features]
# Whether to regenerate code from sieve_ir.fbs. Requires the Flatbuffers compiler.
fbs = []

[dependencies]
flatbuffers = "0.5.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.13"
structopt = "0.3.17"
num-bigint = "0.3.0"
num-traits = "0.2.12"
colored = "2.0.0"
regex = "1"
zkinterface = "1.3.2"

[build-dependencies]
regex = "1"
